[project]
name = "Moonlark"
version = "0.1.0"
description = "A new ChatBot"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = [
    "nonebot_plugin_orm",
    "nonebot_plugin_alconna",
    "nonebot_plugin_picstatus",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_session"
]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry]
name = "moonlark"
version = "0.1.0"
description = "A new ChatBot"
package-mode = false
authors = ["XiaoDeng3386 <1744793737@qq.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = {extras = ["fastapi"], version = "^2.2.1"}
nonebot-adapter-onebot = "^2.4.3"
aiofiles = "^23.2.1"
nonebot-plugin-orm = {extras = ["default"], version = "^0.7.1"}
nonebot-plugin-alconna = "^0.46.3"
nonebot-plugin-picstatus = "^2.0.0.post2"
nonebot-adapter-discord = "^0.1.6"
nonebot-plugin-htmlrender = "^0.3.1"
httpx = "^0.27.0"
nonebot-plugin-apscheduler = "^0.4.0"
nonebot-plugin-session = "^0.2.0"
numpy = "^1.26.4"
pillow = "^10.3.0"
scikit-image = "^0.23.1"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.4.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
