[project]
name = "Moonlark"
version = "0.1.0"
description = "A new ChatBot"
readme = "README.md"
requires-python = ">=3.11, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "QQ", module_name = "nonebot.adapters.qq" },
]
plugins = [
    "nonebot_plugin_orm",
    "nonebot_plugin_sentry",
    "nonebot_plugin_alconna",
    "nonebot_plugin_picstatus",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_session",
    "nonebot_plugin_waiter",
    "nonebot_plugin_bilichat",
    "nonebot_plugin_picmcstat",
    "nonebot_plugin_fakepic",

    # Custom plugins
    "nonebot_plugin_access",
    "nonebot_plugin_achievement",
    "nonebot_plugin_alconna_extensions",
    "nonebot_plugin_bag",
    "nonebot_plugin_bingo",
    "nonebot_plugin_boothill",
    "nonebot_plugin_bots",
    "nonebot_plugin_email",
    "nonebot_plugin_extrahelp",
    "nonebot_plugin_fight",
    "nonebot_plugin_finding_the_trail",
    "nonebot_plugin_friend_add",
    "nonebot_plugin_hello",
    "nonebot_plugin_holiday",
    "nonebot_plugin_int",
    "nonebot_plugin_items",
    "nonebot_plugin_join_message",
    "nonebot_plugin_jrrp",
    "nonebot_plugin_larkcave",
    "nonebot_plugin_larkhelp",
    "nonebot_plugin_larklang",
    "nonebot_plugin_larksetu",
    "nonebot_plugin_larkuid",
    "nonebot_plugin_larkuser",
    "nonebot_plugin_larkuid",
    "nonebot_plugin_larkuser",
    "nonebot_plugin_larkutils",
    "nonebot_plugin_latex",
    "nonebot_plugin_linuxman",
    "nonebot_plugin_luxun_works",
    "nonebot_plugin_minigame_api",
    "nonebot_plugin_openai",
    "nonebot_plugin_pacman",
    "nonebot_plugin_preview",
    "nonebot_plugin_quick_math",
    "nonebot_plugin_ranking",
    "nonebot_plugin_render",
    "nonebot_plugin_sign",
    "nonebot_plugin_sudoku",
    "nonebot_plugin_time_progress",
    "nonebot_plugin_translate",
    "nonebot_plugin_vote",
    "nonebot_plugin_wakatime",
    "nonebot_plugin_wolfram_alpha",
    "nonebot_plugin_2048",
    "nonebot_plugin_defuse_tnt",
    "nonebot_plugin_turn_off_lights",
    "nonebot_plugin_github",
    "nonebot_plugin_schedule",
    "nonebot_plugin_wordle",
    "nonebot_plugin_message_summary",
    "nonebot_plugin_chatterbox_ranking",
    "nonebot_plugin_chat",
    "nonebot_plugin_cave_image_prompt",
    "nonebot_plugin_hkrpg_calendar",
    "nonebot_plugin_ba_calendar",
    "nonebot_plugin_everyday_wife",
    "nonebot_plugin_online_timer",
    "nonebot_plugin_status_report"
]
plugin_dirs = []
builtin_plugins = []

[tool.poetry]
name = "moonlark"
version = "0.1.0"
description = "A new ChatBot"
package-mode = false
authors = ["XiaoDeng3386 <1744793737@qq.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot-plugin-picmcstat = {git = "https://github.com/Moonlark-Dev/nonebot-plugin-picmcstat.git"}
nonebot-plugin-picstatus = "^2.1.3"
nonebot-plugin-sentry = "^2.0.0"

moonlark-custom-plugins = {path = "./src", develop = true}
nonebot-plugin-bilichat = {git = "https://github.com/Moonlark-Dev/nonebot-plugin-bilichat.git"}
html2text = "^2025.4.15"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.4.2"
ipykernel = "^6.30.1"
ruff = "^0.12.1"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
exclude = ["**/.venv"]
reportUnusedCallResult = false

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.11"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
reportShadowedImports = false
exclude = ["**/.venv"]
reportUnusedCallResult = false

[tool.ruff]
extend-exclude = []
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PGH",
    # "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TRY",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]


[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]
