[project]
name = "moonlark_custom_plugins"
version = "0.2.2"
description = "Moonlark 中的自定义插件"
requires-python = ">=3.11, <4.0"


[tool.poetry.dependencies]
python = ">=3.11, <4.0"
nonebot2 = {extras = ["fastapi"], version = ">=2.3.1, <3.0.0"}

httpx = {extras = ["socks"], version = ">=0.28.1, <0.29.0"}
aiofiles = ">=23.2.1, <24.0.0"
numpy = ">=2.3.1, <3.0.0"
pillow = ">=10.3.0, <11.0.0"
scikit-image = ">=0.23.1, <0.24.0"
beautifulsoup4 = ">=4.12.3, <5.0.0"
pypinyin = ">=0.51.0, <0.52.0"
jieba = ">=0.42.1, <0.43.0"
sympy = ">=1.12.1, <2.0.0"
openai = ">=1.34.0, <2.0.0"
aiosqlite = ">=0.20.0, <0.21.0"
aiomysql = ">=0.2.0, <0.3.0"
cryptography = ">=44.0.0, <45.0.0"
pyproject-toml = ">=0.0.10, <0.0.11"
matplotlib = ">=3.10.0, <4.0.0"

nonebot-adapter-onebot = ">=2.4.6, <3.0.0"
nonebot-plugin-htmlrender = ">=0.6.6, <0.7.0"
nonebot-plugin-alconna = ">=0.59.2, <0.60.0"
nonebot-plugin-orm = ">=0.8.0, <0.9.0"
nonebot-plugin-session = ">=0.3.2, <0.4.0"
nonebot-plugin-userinfo = ">=0.2.6, <0.3.0"
nonebot-adapter-qq = {git = "https://github.com/Moonlark-Dev/adapter-qq"}

py-cpuinfo = ">= 9.0.0, < 10.0.0"
psutil = ">= 7.1.0, < 8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "nonebot_plugin_access", from = "./plugins" },
    { include = "nonebot_plugin_achievement", from = "./plugins" },
    { include = "nonebot_plugin_alconna_extensions", from = "./plugins" },
    { include = "nonebot_plugin_bag", from = "./plugins" },
    { include = "nonebot_plugin_bingo", from = "./plugins" },
    { include = "nonebot_plugin_boothill", from = "./plugins" },
    { include = "nonebot_plugin_bots", from = "./plugins" },
    { include = "nonebot_plugin_email", from = "./plugins" },
    { include = "nonebot_plugin_extrahelp", from = "./plugins" },
    { include = "nonebot_plugin_fight", from = "./plugins" },
    { include = "nonebot_plugin_finding_the_trail", from = "./plugins" },
    { include = "nonebot_plugin_friend_add", from = "./plugins" },
    { include = "nonebot_plugin_hello", from = "./plugins" },
    { include = "nonebot_plugin_holiday", from = "./plugins" },
    { include = "nonebot_plugin_int", from = "./plugins" },
    { include = "nonebot_plugin_items", from = "./plugins" },
    { include = "nonebot_plugin_join_message", from = "./plugins" },
    { include = "nonebot_plugin_jrrp", from = "./plugins" },
    { include = "nonebot_plugin_larkcave", from = "./plugins" },
    { include = "nonebot_plugin_larkhelp", from = "./plugins" },
    { include = "nonebot_plugin_larklang", from = "./plugins" },
    { include = "nonebot_plugin_larksetu", from = "./plugins" },
    { include = "nonebot_plugin_larkuid", from = "./plugins" },
    { include = "nonebot_plugin_larkuser", from = "./plugins" },
    { include = "nonebot_plugin_larkuid", from = "./plugins" },
    { include = "nonebot_plugin_larkuser", from = "./plugins" },
    { include = "nonebot_plugin_larkutils", from = "./plugins" },
    { include = "nonebot_plugin_latex", from = "./plugins" },
    { include = "nonebot_plugin_linuxman", from = "./plugins" },
    { include = "nonebot_plugin_luxun_works", from = "./plugins" },
    { include = "nonebot_plugin_minigame_api", from = "./plugins" },
    { include = "nonebot_plugin_openai", from = "./plugins" },
    { include = "nonebot_plugin_pacman", from = "./plugins" },
    { include = "nonebot_plugin_preview", from = "./plugins" },
    { include = "nonebot_plugin_quick_math", from = "./plugins" },
    { include = "nonebot_plugin_ranking", from = "./plugins" },
    { include = "nonebot_plugin_render", from = "./plugins" },
    { include = "nonebot_plugin_sign", from = "./plugins" },
    { include = "nonebot_plugin_time_progress", from = "./plugins" },
    { include = "nonebot_plugin_translate", from = "./plugins" },
    { include = "nonebot_plugin_vote", from = "./plugins" },
    { include = "nonebot_plugin_wakatime", from = "./plugins" },
    { include = "nonebot_plugin_wolfram_alpha", from = "./plugins" },
    { include = "nonebot_plugin_2048", from = "./plugins" },
    { include = "nonebot_plugin_defuse_tnt", from = "./plugins" },
    { include = "nonebot_plugin_turn_off_lights", from = "./plugins" },
    { include = "nonebot_plugin_github", from = "./plugins" },
    { include = "nonebot_plugin_schedule", from = "./plugins" },
    { include = "nonebot_plugin_wordle", from = "./plugins" },
    { include = "nonebot_plugin_sudoku", from = "./plugins" },
    { include = "nonebot_plugin_message_summary", from = "./plugins" },
    { include = "nonebot_plugin_chatterbox_ranking", from = "./plugins" },
    { include = "nonebot_plugin_chat", from = "./plugins" },
    { include = "nonebot_plugin_cave_image_prompt", from = "./plugins" },
    { include = "nonebot_plugin_hkrpg_calendar", from = "./plugins" },
    { include = "nonebot_plugin_ba_calendar", from = "./plugins" },
    { include = "nonebot_plugin_everyday_wife", from = "./plugins" },
    { include = "nonebot_plugin_online_timer", from = "./plugins" },
    { include = "nonebot_plugin_status_report", from = "./plugins" },
    { include = "nonebot_plugin_broadcast", from = "./plugins" },
    { include = "nonebot_plugin_ghot", from = "./plugins" },
    { include = "nonebot_plugin_status", from = "./plugins" }
]


[tool.poetry.plugins.nb_scripts]
larkhelp-generate = "nonebot_plugin_larkhelp.__main__:generate_help_markdown"
